🐞 fix: scrollbar问题修复
1.完成页面resize时滚动条不能及时出现和消失的问题
2.完成scrollbar组件嵌套时hover样式互相影响的问题

--- a/packages/components/Scrollbar/style/scrollbar.styl
+++ b/packages/components/Scrollbar/style/scrollbar.styl
@@ -2,9 +2,11 @@
     overflow hidden
     position relative
     &:hover
-        .x-scrollbar__bar
-            visibility visible
-            opacity 1
+        > .x-scrollbar__vertical
+        > .x-scrollbar__horizontal
+            > .x-scrollbar__bar
+                visibility visible
+                opacity 1
     .x-scrollbar__container
         overflow scroll
         overscroll-behavior contain
@@ -38,6 +40,10 @@
         visibility hidden
         opacity 0
         transition visibility .5s, opacity .5s
-        &:hover
+        &:active
+            background-color var(--backgroundColorHover)
+            opacity 1
+            visibility visible
+        &:hover, &:active
             background-color var(--backgroundColorHover)
 
